# packforge

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  fuzz.yml
benchmarks/: corpus-v1.json
benchmarks/results/m0-linux-x86_64-2026-07-11/: README.md  gates.json  metadata.json  raw-samples.tsv  report.json  summary.tsv
benchmarks/results/m2-linux-x86_64-2026-07-11/: README.md  gates.json  m2-gates.json  m2-report.json  metadata.json  raw-samples.tsv  report.json  summary.tsv
benchmarks/results/m2-linux-x86_64-2026-07-11/runtime-traces/: hello-c.inspect.json  hello-c.strace  hello-cpp.inspect.json  hello-cpp.strace  hello-go.inspect.json  hello-go.strace  hello-rust.inspect.json  hello-rust.strace
benchmarks/schema/: benchmark-report-v1.schema.json  m2-performance-report-v2.schema.json
crates/packforge-cli/: Cargo.toml
crates/packforge-cli/src/: main.rs
crates/packforge-cli/tests/: cli.rs
crates/packforge-codec5-decoder/: Cargo.toml
crates/packforge-codec5-decoder/examples/: m2_codec5_profile.rs
crates/packforge-codec5-decoder/src/: lib.rs
crates/packforge-codec5-sys/: Cargo.toml  README.md  build.rs
crates/packforge-codec5-sys/src/: bridge.c  lib.rs
crates/packforge-core/: Cargo.toml
crates/packforge-core/examples/: m2_codec4_pack.rs  m2_codec5_pack.rs  m2_codec5_partition_spike.rs  m2_codec_spike.rs  m2_lzma_encode.rs  m2_pfg_hlz_probe.rs  m2_pfg_lz_probe.rs  v2_host_roundtrip.rs
crates/packforge-core/src/: benchmark.rs  container.rs  diagnostic.rs  executable.rs  executable_v2.rs  executable_v2_codec4.rs  executable_v2_codec5.rs  format.rs  lib.rs  manifest.rs  pfg_hlz.rs  pfg_lz.rs
crates/packforge-core/tests/: container_report_contract.rs
crates/packforge-lzma-decoder/: Cargo.toml
crates/packforge-lzma-decoder/src/: lib.rs
crates/packforge-runtime-hash/: Cargo.toml
crates/packforge-runtime-hash-x86/: Cargo.toml
crates/packforge-runtime-hash-x86/src/: lib.rs
crates/packforge-runtime-hash/src/: lib.rs
docs/: ARCHITECTURE.md  BENCHMARKING.md  CONTAINER_FORMAT.md  DIAGNOSTICS.md  EXECUTABLE_FORMAT.md  EXECUTABLE_FORMAT_V2.md  MANIFEST_FORMAT.md  PRODUCT.md  ROADMAP.md  RUNTIME_SPIKE.md
docs/plans/: M0.md  M1.md  M2.md  M2_DIRECT_RUNTIME.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: artifact_parsers.rs  container_decompressor.rs  manifest_parser.rs  runtime_apultra.rs  runtime_bcj2.rs  runtime_hash.rs  runtime_lz4.rs  runtime_lzma.rs  runtime_v2_format.rs
runtime/: README.md
runtime/artifacts/linux-x86_64/: loader-v1  loader-v1.sha256  loader-v2  loader-v2-codec5  loader-v2-codec5.sha256  loader-v2.sha256
runtime/linux-x86_64/: Cargo.toml  rust-toolchain.toml
runtime/linux-x86_64/.cargo/: config.toml
runtime/linux-x86_64/examples/: codec5_pipeline_profile.rs  hot_path_benchmark.rs
runtime/linux-x86_64/src/: apultra.rs  bcj.rs  bcj2.rs  hash.rs  lib.rs  lz4.rs  lzma.rs  lzma_asm.rs  lzma_parallel.rs  main.rs  procfd.rs  v2.rs  v2_format.rs
runtime/lzma-spike/: Cargo.toml  README.md
runtime/zstd-spike/: Cargo.toml  README.md  rust-toolchain.toml
runtime/zstd-spike/.cargo/: config.toml
runtime/zstd-spike/src/: io_baseline.rs  ruzstd_decoder.rs
schemas/: container-report-v1.schema.json
schemas/examples/: container-inspect-v1.json  container-verify-v1.json
scripts/: benchmark-linux-executable.sh  benchmark_contract.py  build-runtime-v2.sh  build-runtime.sh  check-lzma-asm-object.sh  check-runtime-v2-elf.py  ci-codec4-asm-smoke.sh  ci-codec5-smoke.sh  ci-container-repack.sh  ci-linux-executable-smoke.sh  ci-linux-smoke.sh  ci-lzma-spike.sh  m2_performance_contract.py  runtime-v2-codegen-matrix.sh  runtime_phase_trace.py
scripts/support/: apultra_bcj2_oracle.c  bcj2_filter.c  be32_delta_filter.c  brotli_decoder_oracle.c  lzma_asm_oracle.c  lzma_codec4_asm_oracle.c
scripts/tests/: test_benchmark_contract.py  test_m2_performance_contract.py  test_runtime_phase_trace.py  test_runtime_v2_elf.py
tests/fixtures/: behavior-static.c  hello-static.c  hello-static.cc  hello-static.go  hello-static.rs
