[package]
name = "packforge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "packforge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
packforge-core = { path = "../packforge-core" }
serde = "1.0.228"
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
