[package]
name = "packforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.8.5"
lz4_flex = { version = "0.13.1", default-features = false, features = ["safe-decode", "safe-encode", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
zstd = "0.13.3"

[dev-dependencies]
serde_json = "1.0.150"

[lints]
workspace = true
