[package]
name = "packforge-runtime-hash"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
lzma = []
optimized = []
four-lane = ["optimized", "dep:packforge-runtime-hash-x86"]

[dependencies]
packforge-runtime-hash-x86 = { path = "../packforge-runtime-hash-x86", optional = true }

[dev-dependencies]
blake3 = { version = "1.8.5", features = ["pure"] }

[lints]
workspace = true
