[package]
name = "packforge-runtime-linux-x86-64"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
packforge-lzma-decoder = { path = "../../crates/packforge-lzma-decoder", optional = true }
packforge-codec5-decoder = { path = "../../crates/packforge-codec5-decoder", optional = true }
packforge-runtime-hash = { path = "../../crates/packforge-runtime-hash", features = ["lzma", "optimized"], optional = true }

[features]
lzma = ["dep:packforge-lzma-decoder"]
lzma-asm = []
lzma-parallel = ["lzma-asm"]
apultra-bcj2 = ["dep:packforge-codec5-decoder"]
optimized-hash = ["dep:packforge-runtime-hash"]
four-lane-hash = ["optimized-hash", "packforge-runtime-hash/four-lane"]
optimized = []
runtime-v2 = []
lzma-size-spike = ["lzma"]

[[bin]]
name = "packforge-runtime-linux-x86-64"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "packforge-runtime-v2-linux-x86-64"
path = "src/v2.rs"
required-features = ["runtime-v2"]
test = false
bench = false

[[example]]
name = "hot_path_benchmark"
path = "examples/hot_path_benchmark.rs"
required-features = ["lzma"]

[workspace]

[dev-dependencies]
blake3 = { version = "1.8.5", features = ["pure"] }
lz4_flex = { version = "0.13.1", default-features = false, features = ["safe-encode", "std"] }
lzma-sdk-rs = "0.2301.1"
packforge-codec5-sys = { path = "../../crates/packforge-codec5-sys" }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
